--- a/app/views/cluster/show.html.erb
+++ b/app/views/cluster/show.html.erb
@@ -1,3 +1,6 @@
+<% if @error %>
+<%= render 'not_found' %>
+<% else %>
 <script src="https://d3js.org/d3.v4.js"></script>
 
 
@@ -447,3 +450,4 @@
     element.onmousewheel = document.onmousewheel = wheel;
 
 </script>
+<% end %>
